--- a/index.html
+++ b/index.html
@@ -1,67 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Project</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>For Alex 💖</title>
   <style>
     body {
-      font-family: system-ui, sans-serif;
       margin: 0;
-      background: #0f172a;
-      color: #e5e7eb;
-      line-height: 1.6;
+      font-family: Arial, sans-serif;
+      background: white;
+      height: 100vh;
+      overflow: hidden;
     }
-    header {
-      padding: 3rem;
-      background: linear-gradient(135deg, #6366f1, #22c55e);
-      color: white;
+
+    .collage {
+      position: relative;
+      width: 100%;
+      height: 100%;
     }
-    main {
-      padding: 2rem 3rem;
-      max-width: 900px;
-      margin: auto;
+
+    .item {
+      position: absolute;
+      cursor: pointer;
+      transition: transform 0.2s ease;
     }
-    h1, h2 { margin-top: 0; }
-    .card {
-      background: #020617;
-      padding: 1.5rem;
+
+    .item:hover {
+      transform: scale(1.1);
+    }
+
+    /* Example positions – tweak these to match your inspo */
+    .camera { top: 40%; left: 35%; width: 220px; }
+    .fries { bottom: 10%; left: 45%; width: 100px; }
+    .dice { bottom: 15%; left: 10%; width: 90px; }
+    .cassette { bottom: 10%; right: 10%; width: 220px; }
+    .alex { top: 15%; left: 45%; width: 120px; }
+    .ale { top: 35%; right: 15%; width: 120px; }
+
+    /* MODALS */
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 24px;
+      max-width: 400px;
       border-radius: 12px;
-      margin: 1.5rem 0;
+      text-align: center;
+      position: relative;
     }
-    a { color: #60a5fa; }
+
+    .modal img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+
+    .close {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      cursor: pointer;
+      font-size: 26px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Project Name</h1>
-    <p>Short description of what this project is about</p>
-  </header>
 
-  <main>
-    <div class="card">
-      <h2>About</h2>
-      <p>Explain your project here.</p>
-    </div>
-
-    <div class="card">
-      <h2>Methods</h2>
-      <p>Briefly describe what you did.</p>
-    </div>
-
-    <div class="card">
-      <h2>Results</h2>
-      <p>Show your findings or screenshots.</p>
-    </div>
-
-    <div class="card">
-      <h2>Code</h2>
+  <!-- MANUAL POPUP -->
+  <div id="manualModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeManual()">×</span>
+      <h2>How to use this page 💌</h2>
       <p>
-        <a href="https://github.com/tuusuario/tu-repo-de-codigo">
-          View the repository
-        </a>
+        Click on the objects to reveal memories.  
+        Each one is something that reminds me of us.  
+        I love you 🩷
       </p>
     </div>
-  </main>
+  </div>
+
+  <!-- IMAGE POPUP -->
+  <div id="imageModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeImage()">×</span>
+      <img id="modalImage" src="" alt="Memory" />
+    </div>
+  </div>
+
+  <!-- COLLAGE -->
+  <div class="collage">
+    <img class="item camera" src="images/camera.png" onclick="openImage('images/memory1.jpg')" />
+    <img class="item fries" src="images/fries.png" onclick="openImage('images/memory2.jpg')" />
+    <img class="item dice" src="images/dice.png" onclick="openImage('images/memory3.jpg')" />
+    <img class="item cassette" src="images/cassette.png" onclick="openImage('images/memory4.jpg')" />
+    <img class="item alex" src="images/alex.png" onclick="openImage('images/memory5.jpg')" />
+    <img class="item ale" src="images/ale.png" onclick="openImage('images/memory6.jpg')" />
+  </div>
+
+  <script>
+    window.onload = function () {
+      document.getElementById("manualModal").style.display = "flex";
+    };
+
+    function closeManual() {
+      document.getElementById("manualModal").style.display = "none";
+    }
+
+    function openImage(src) {
+      document.getElementById("modalImage").src = src;
+      document.getElementById("imageModal").style.display = "flex";
+    }
+
+    function closeImage() {
+      document.getElementById("imageModal").style.display = "none";
+    }
+  </script>
+
 </body>
 </html>
