--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>For Alex 💖</title>
+  <title>Alex & Ale </title>
   <style>
     body {
       margin: 0;
@@ -77,11 +77,11 @@
   <div id="manualModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeManual()">×</span>
-      <h2>How to use this page 💌</h2>
+      <h2>Instrucciones 💌</h2>
       <p>
-        Click on the objects to reveal memories.  
+        Da click en los objetos :)
         Each one is something that reminds me of us.  
-        I love you 🩷
+        Te quiero 🩷
       </p>
     </div>
   </div>
@@ -96,12 +96,12 @@
 
   <!-- COLLAGE -->
   <div class="collage">
-    <img class="item camera" src="images/camera.png" onclick="openImage('images/memory1.jpg')" />
-    <img class="item fries" src="images/fries.png" onclick="openImage('images/memory2.jpg')" />
-    <img class="item dice" src="images/dice.png" onclick="openImage('images/memory3.jpg')" />
-    <img class="item cassette" src="images/cassette.png" onclick="openImage('images/memory4.jpg')" />
-    <img class="item alex" src="images/alex.png" onclick="openImage('images/memory5.jpg')" />
-    <img class="item ale" src="images/ale.png" onclick="openImage('images/memory6.jpg')" />
+    <img class="item camera" src="camara.png" onclick="openImage('images/memory1.jpg')" />
+    <img class="item fries" src="papas.png" onclick="openImage('images/memory2.jpg')" />
+    <img class="item dice" src="dado.png" onclick="openImage('images/memory3.jpg')" />
+    <img class="item cassette" src="cassette.png" onclick="openImage('images/memory4.jpg')" />
+    <img class="item alex" src="alex.png" onclick="openImage('images/memory5.jpg')" />
+    <img class="item ale" src="ale.png" onclick="openImage('images/memory6.jpg')" />
   </div>
 
   <script>
