--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Alex & Ale </title>
+  <title>Alex & Ale</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: white;
+      background: #faf7f2;
       height: 100vh;
       overflow: hidden;
     }
@@ -22,21 +24,40 @@
       position: absolute;
       cursor: pointer;
       transition: transform 0.2s ease;
+      user-select: none;
+      -webkit-user-drag: none;
+      filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.2));
     }
 
     .item:hover {
       transform: scale(1.1);
     }
 
-    /* Example positions – tweak these to match your inspo */
-    .camera { top: 40%; left: 35%; width: 220px; }
-    .fries { bottom: 10%; left: 45%; width: 100px; }
-    .dice { bottom: 15%; left: 10%; width: 90px; }
-    .cassette { bottom: 10%; right: 10%; width: 220px; }
-    .alex { top: 15%; left: 45%; width: 120px; }
-    .ale { top: 35%; right: 15%; width: 120px; }
+    /* Main center piece */
+    .camera { top: 38%; left: 34%; width: 240px; }
 
-    /* MODALS */
+    /* Names */
+    .alex { top: 15%; left: 42%; width: 140px; transform: rotate(-5deg); }
+    .ale  { top: 35%; right: 12%; width: 130px; transform: rotate(4deg); }
+
+    /* Top elements */
+    .beso       { top: 12%; left: 20%; width: 80px;  transform: rotate(-10deg); }
+    .cine       { top: 12%; right: 25%; width: 110px; transform: rotate(6deg); }
+    .calendario { top: 10%; right: 8%;  width: 120px; transform: rotate(-4deg); }
+
+    /* Left side */
+    .carta { top: 38%; left: 10%; width: 140px; transform: rotate(-6deg); }
+    .dice  { bottom: 15%; left: 8%; width: 90px; transform: rotate(12deg); }
+
+    /* Bottom */
+    .fries    { bottom: 8%;  left: 42%; width: 110px; transform: rotate(-5deg); }
+    .cerillos { bottom: 10%; left: 25%; width: 130px; transform: rotate(6deg); }
+    .uno      { bottom: 12%; right: 20%; width: 140px; transform: rotate(-8deg); }
+
+    /* Right */
+    .cassette { bottom: 10%; right: 8%; width: 240px; transform: rotate(5deg); }
+
+    /* Modals */
     .modal {
       display: none;
       position: fixed;
@@ -54,6 +75,7 @@
       border-radius: 12px;
       text-align: center;
       position: relative;
+      animation: pop 0.25s ease-out;
     }
 
     .modal img {
@@ -69,24 +91,37 @@
       font-size: 26px;
       font-weight: bold;
     }
+
+    @keyframes pop {
+      from { transform: scale(0.9); opacity: 0; }
+      to   { transform: scale(1);   opacity: 1; }
+    }
+
+    /* Mobile tweak */
+    @media (max-width: 768px) {
+      .camera { width: 180px; left: 25%; }
+      .cassette { width: 180px; }
+      .alex, .ale { width: 110px; }
+    }
   </style>
 </head>
+
 <body>
 
-  <!-- MANUAL POPUP -->
+  <!-- Manual Modal -->
   <div id="manualModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeManual()">×</span>
       <h2>Instrucciones 💌</h2>
       <p>
-        Da click en los objetos :)
-        Each one is something that reminds me of us.  
+        Da click en los objetos :)<br/>
+        Cada uno representa un recuerdo nuestro.<br/>
         Te quiero 🩷
       </p>
     </div>
   </div>
 
-  <!-- IMAGE POPUP -->
+  <!-- Image Modal -->
   <div id="imageModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeImage()">×</span>
@@ -94,7 +129,7 @@
     </div>
   </div>
 
-  <!-- COLLAGE -->
+  <!-- Collage -->
   <div class="collage">
     <img class="item camera" src="camara.png" onclick="openImage('images/memory1.jpg')" />
     <img class="item fries" src="papas.png" onclick="openImage('images/memory2.jpg')" />
@@ -102,6 +137,12 @@
     <img class="item cassette" src="cassette.png" onclick="openImage('images/memory4.jpg')" />
     <img class="item alex" src="alex.png" onclick="openImage('images/memory5.jpg')" />
     <img class="item ale" src="ale.png" onclick="openImage('images/memory6.jpg')" />
+    <img class="item beso" src="beso.png" onclick="openImage('images/memory7.jpg')" />
+    <img class="item calendario" src="calendario.png" onclick="openImage('images/memory8.jpg')" />
+    <img class="item carta" src="carta.png" onclick="openImage('images/memory9.jpg')" />
+    <img class="item cerillos" src="cerillos.png" onclick="openImage('images/memory10.jpg')" />
+    <img class="item cine" src="cine.png" onclick="openImage('images/memory11.jpg')" />
+    <img class="item uno" src="uno.png" onclick="openImage('images/memory12.jpg')" />
   </div>
 
   <script>
