--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: white;
+      background: white; /* ← white backdrop */
       height: 100vh;
       overflow: hidden;
     }
