--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: white; /* ← white backdrop */
+      background: white;
       height: 100vh;
       overflow: hidden;
     }
@@ -34,7 +34,7 @@
     }
 
     /* Main center piece */
-    .camera { top: 38%; left: 34%; width: 240px; }
+    .camera { top: 40%; left: 34%; width: 300px; }
 
     /* Names */
     .alex { top: 15%; left: 42%; width: 140px; transform: rotate(-5deg); }
