--- a/index.html
+++ b/index.html
@@ -33,30 +33,107 @@
       transform: scale(1.1);
     }
 
-    /* Main center piece */
-    .camera { top: 38%; left: 34%; width: 400px; }
+      .item {
+  position: absolute;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  user-select: none;
+  -webkit-user-drag: none;
+  /* shadow removed */
+}
 
-    
-    /* Names */
-    .alex { top: 15%; left: 42%; width: 140px; transform: rotate(-5deg); }
-    .ale  { top: 35%; right: 12%; width: 130px; transform: rotate(4deg); }
+.item:hover {
+  transform: scale(1.08);
+}
 
-    /* Top elements */
-    .beso       { top: 12%; left: 20%; width: 80px;  transform: rotate(-10deg); }
-    .cine       { top: 12%; right: 25%; width: 110px; transform: rotate(6deg); }
-    .calendario { top: 10%; right: 8%;  width: 120px; transform: rotate(-4deg); }
+/* Center focal point */
+.camera { 
+  top: 32%; 
+  left: 30%; 
+  width: 420px; 
+}
 
-    /* Left side */
-    .carta { top: 38%; left: 10%; width: 140px; transform: rotate(-6deg); }
-    .dice  { bottom: 15%; left: 8%; width: 90px; transform: rotate(12deg); }
+/* Names above camera */
+.alex { 
+  top: 10%; 
+  left: 38%; 
+  width: 150px; 
+  transform: rotate(-4deg); 
+}
 
-    /* Bottom */
-    .fries    { bottom: 8%;  left: 42%; width: 110px; transform: rotate(-5deg); }
-    .cerillos { bottom: 10%; left: 25%; width: 130px; transform: rotate(6deg); }
-    .uno      { bottom: 12%; right: 20%; width: 140px; transform: rotate(-8deg); }
+.ale {  
+  top: 22%; 
+  left: 55%; 
+  width: 150px; 
+  transform: rotate(4deg); 
+}
 
-    /* Right */
-    .cassette { bottom: 10%; right: 8%; width: 240px; transform: rotate(5deg); }
+/* Top row small objects */
+.beso { 
+  top: 8%; 
+  left: 18%; 
+  width: 90px;  
+  transform: rotate(-8deg); 
+}
+
+.cine { 
+  top: 8%; 
+  right: 18%; 
+  width: 120px; 
+  transform: rotate(6deg); 
+}
+
+.calendario { 
+  top: 6%; 
+  right: 5%;  
+  width: 130px; 
+  transform: rotate(-3deg); 
+}
+
+/* Left side framing */
+.carta { 
+  top: 40%; 
+  left: 5%; 
+  width: 160px; 
+  transform: rotate(-6deg); 
+}
+
+.dice {  
+  bottom: 22%; 
+  left: 10%; 
+  width: 100px; 
+  transform: rotate(10deg); 
+}
+
+/* Bottom framing */
+.fries {    
+  bottom: 6%;  
+  left: 40%; 
+  width: 120px; 
+  transform: rotate(-4deg); 
+}
+
+.cerillos { 
+  bottom: 8%; 
+  left: 22%; 
+  width: 150px; 
+  transform: rotate(5deg); 
+}
+
+.uno {      
+  bottom: 8%; 
+  right: 22%; 
+  width: 160px; 
+  transform: rotate(-6deg); 
+}
+
+/* Right anchor */
+.cassette { 
+  bottom: 10%; 
+  right: 4%; 
+  width: 260px; 
+  transform: rotate(3deg); 
+}
 
     /* Modals */
     .modal {
