--- a/index.html
+++ b/index.html
@@ -35,6 +35,47 @@
     .cassette { bottom: 10%; right: 10%; width: 220px; }
     .alex { top: 15%; left: 45%; width: 120px; }
     .ale { top: 35%; right: 15%; width: 120px; }
+.beso {
+  top: 12%;
+  left: 20%;
+  width: 80px;
+  transform: rotate(-10deg);
+}
+
+.calendario {
+  top: 10%;
+  right: 8%;
+  width: 120px;
+  transform: rotate(-4deg);
+}
+
+.carta {
+  top: 38%;
+  left: 10%;
+  width: 140px;
+  transform: rotate(-6deg);
+}
+
+.cerillos {
+  bottom: 10%;
+  left: 25%;
+  width: 130px;
+  transform: rotate(6deg);
+}
+
+.cine {
+  top: 12%;
+  right: 25%;
+  width: 110px;
+  transform: rotate(6deg);
+}
+
+.uno {
+  bottom: 12%;
+  right: 20%;
+  width: 140px;
+  transform: rotate(-8deg);
+
 
     /* MODALS */
     .modal {
