--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>For Alex 💖</title>
+  <title>Alex & Ale</title>
   <style>
     body {
       margin: 0;
@@ -28,13 +28,83 @@
       transform: scale(1.1);
     }
 
-    /* Example positions – tweak these to match your inspo */
-    .camera { top: 40%; left: 35%; width: 220px; }
-    .fries { bottom: 10%; left: 45%; width: 100px; }
-    .dice { bottom: 15%; left: 10%; width: 90px; }
-    .cassette { bottom: 10%; right: 10%; width: 220px; }
-    .alex { top: 15%; left: 45%; width: 120px; }
-    .ale { top: 35%; right: 15%; width: 120px; }
+/* Main center */
+.camera { 
+  top: 40%; 
+  left: 35%; 
+  width: 220px; 
+}
+
+/* Bottom area */
+.fries { 
+  bottom: 10%; 
+  left: 45%; 
+  width: 100px; 
+}
+
+.dice { 
+  bottom: 15%; 
+  left: 10%; 
+  width: 90px; 
+}
+
+.cerillos { 
+  bottom: 10%; 
+  left: 25%; 
+  width: 120px; 
+}
+
+.uno { 
+  bottom: 12%; 
+  right: 22%; 
+  width: 130px; 
+}
+
+/* Right side */
+.cassette { 
+  bottom: 10%; 
+  right: 10%; 
+  width: 220px; 
+}
+
+.ale { 
+  top: 35%; 
+  right: 15%; 
+  width: 120px; 
+}
+
+/* Top area */
+.alex { 
+  top: 15%; 
+  left: 45%; 
+  width: 120px; 
+}
+
+.beso { 
+  top: 12%; 
+  left: 20%; 
+  width: 80px; 
+}
+
+.cine { 
+  top: 12%; 
+  right: 25%; 
+  width: 110px; 
+}
+
+.calendario { 
+  top: 10%; 
+  right: 8%; 
+  width: 120px; 
+}
+
+/* Left side */
+.carta { 
+  top: 38%; 
+  left: 10%; 
+  width: 130px; 
+}
+
 
     /* MODALS */
     .modal {
@@ -77,7 +147,7 @@
   <div id="manualModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeManual()">×</span>
-      <h2>How to use this page 💌</h2>
+      <h2>Instrucciones 💌</h2>
       <p>
         Click on the objects to reveal memories.  
         Each one is something that reminds me of us.  
@@ -96,12 +166,21 @@
 
   <!-- COLLAGE -->
   <div class="collage">
-    <img class="item camera" src="images/camara.png" onclick="openImage('images/memory1.jpg')" />
-    <img class="item fries" src="images/papas.png" onclick="openImage('images/memory2.jpg')" />
-    <img class="item dice" src="images/dado.png" onclick="openImage('images/memory3.jpg')" />
-    <img class="item cassette" src="images/cassette.png" onclick="openImage('images/memory4.jpg')" />
-    <img class="item alex" src="images/alex.png" onclick="openImage('images/memory5.jpg')" />
-    <img class="item ale" src="images/ale.png" onclick="openImage('images/memory6.jpg')" />
+     <img class="item camera" src="camara.png" onclick="openImage('images/memory1.jpg')" />
+    <img class="item fries" src="papas.png" onclick="openImage('images/memory2.jpg')" />
+    <img class="item dice" src="dado.png" onclick="openImage('images/memory3.jpg')" />
+    <img class="item cassette" src="cassette.png" onclick="openImage('images/memory4.jpg')" />
+    <img class="item alex" src="alex.png" onclick="openImage('images/memory5.jpg')" />
+    <img class="item ale" src="ale.png" onclick="openImage('images/memory6.jpg')" />
+    <img class="item beso" src="beso.png" onclick="openImage('images/memory7.jpg')" />
+    <img class="item calendario" src="calendario.png" onclick="openImage('images/memory8.jpg')" />
+    <img class="item carta" src="carta.png" onclick="openImage('images/memory9.jpg')" />
+    <img class="item cerillos" src="cerillos.png" onclick="openImage('images/memory10.jpg')" />
+    <img class="item cine" src="cine.png" onclick="openImage('images/memory11.jpg')" />
+    <img class="item uno" src="uno.png" onclick="openImage('images/memory12.jpg')" />
+  </div>
+
+      
   </div>
 
   <script>
