--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     }
 
 /* Main center */
+
 .camera { 
   top: 50%; 
   left: 50%; 
   width: 400px; 
+  transform: translate(-50%, -50%);
 }
 
 /* Bottom area */
