--- a/index.html
+++ b/index.html
@@ -29,83 +29,84 @@
     }
 
 /* Main center */
-
+/* Main center */
 .camera { 
-  top: 50%; 
+  top: 55%; 
   left: 50%; 
-  width: 400px; 
+  width: 420px; 
   transform: translate(-50%, -50%);
 }
 
-/* Bottom area */
-.fries { 
-  bottom: 10%; 
-  left: 45%; 
-  width: 200px; 
+/* Top row */
+.beso { 
+  top: 10%; 
+  left: 20%; 
+  width: 130px; 
 }
 
-.dice { 
-  bottom: 15%; 
-  left: 10%; 
-  width: 150px; 
-}
-
-.cerillos { 
-  bottom: 10%; 
-  left: 25%; 
-  width: 200px; 
-}
-
-.uno { 
-  bottom: 12%; 
-  right: 22%; 
-  width: 190px; 
-}
-
-/* Right side */
-.cassette { 
-  bottom: 10%; 
-  right: 10%; 
-  width: 220px; 
-}
-
-.ale { 
-  top: 35%; 
-  right: 15%; 
-  width: 190px; 
-}
-
-/* Top area */
 .alex { 
-  top: 15%; 
+  top: 12%; 
   left: 45%; 
   width: 170px; 
 }
 
-.beso { 
-  top: 12%; 
-  left: 20%; 
-  width: 150px; 
-}
-
 .cine { 
   top: 12%; 
-  right: 25%; 
-  width: 200px; 
+  right: 28%; 
+  width: 180px; 
 }
 
 .calendario { 
-  top: 10%; 
-  right: 8%; 
-  width: 250px; 
+  top: 8%; 
+  right: 10%; 
+  width: 220px; 
 }
 
-/* Left side */
+/* Mid area */
 .carta { 
-  top: 45%; 
-  left: 20%; 
-  width: 200px; 
+  top: 42%; 
+  left: 18%; 
+  width: 190px; 
 }
+
+.ale { 
+  top: 42%; 
+  right: 12%; 
+  width: 170px; 
+}
+
+/* Bottom row */
+.dice { 
+  bottom: 12%; 
+  left: 12%; 
+  width: 140px; 
+}
+
+.cerillos { 
+  bottom: 10%; 
+  left: 30%; 
+  width: 190px; 
+}
+
+.fries { 
+  bottom: 8%; 
+  left: 50%; 
+  width: 170px; 
+  transform: translateX(-50%);
+}
+
+.uno { 
+  bottom: 10%; 
+  right: 22%; 
+  width: 180px; 
+}
+
+.cassette { 
+  bottom: 8%; 
+  right: 8%; 
+  width: 230px; 
+}
+
 
 
     /* MODALS */
