--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 /* Main center */
 /* Main center */
 .camera { 
-  top: 55%; 
+  top: 50%; 
   left: 50%; 
   width: 420px; 
   transform: translate(-50%, -50%);
@@ -39,74 +39,74 @@
 
 /* Top row */
 .beso { 
-  top: 10%; 
+  top: 12%; 
   left: 20%; 
-  width: 130px; 
-}
-
-.alex { 
-  top: 12%; 
-  left: 45%; 
-  width: 170px; 
-}
-
-.cine { 
-  top: 12%; 
-  right: 28%; 
-  width: 180px; 
-}
-
-.calendario { 
-  top: 8%; 
-  right: 10%; 
-  width: 220px; 
-}
-
-/* Mid area */
-.carta { 
-  top: 42%; 
-  left: 18%; 
-  width: 190px; 
-}
-
-.ale { 
-  top: 42%; 
-  right: 12%; 
-  width: 170px; 
-}
-
-/* Bottom row */
-.dice { 
-  bottom: 12%; 
-  left: 12%; 
   width: 140px; 
 }
 
+.alex { 
+  top: 14%; 
+  left: 45%; 
+  width: 170px; 
+  transform: rotate(-10deg);
+}
+
+.cine { 
+  top: 14%; 
+  right: 28%; 
+  width: 200px; 
+}
+
+.calendario { 
+  top: 10%; 
+  right: 10%; 
+  width: 260px; 
+}
+
+/* Left column */
+.carta { 
+  top: 45%; 
+  left: 12%; 
+  width: 260px; 
+}
+
+.dice { 
+  bottom: 12%; 
+  left: 8%; 
+  width: 160px; 
+}
+
+/* Bottom row */
 .cerillos { 
-  bottom: 10%; 
-  left: 30%; 
-  width: 190px; 
+  bottom: 14%; 
+  left: 28%; 
+  width: 240px; 
 }
 
 .fries { 
-  bottom: 8%; 
-  left: 50%; 
-  width: 170px; 
-  transform: translateX(-50%);
+  bottom: 10%; 
+  left: 47%; 
+  width: 200px; 
 }
 
 .uno { 
-  bottom: 10%; 
+  bottom: 12%; 
   right: 22%; 
-  width: 180px; 
+  width: 200px; 
+}
+
+/* Right column */
+.ale { 
+  top: 42%; 
+  right: 10%; 
+  width: 190px; 
 }
 
 .cassette { 
-  bottom: 8%; 
+  bottom: 10%; 
   right: 8%; 
-  width: 230px; 
+  width: 280px; 
 }
-
 
 
     /* MODALS */
