--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <!-- COLLAGE -->
   <div class="collage">
      <img class="item camera" src="camara.png" onclick="openImage('images/memory1.jpg')" />
-    <img class="item fries" src="flor.png" onclick="openImage('images/memory2.jpg')" />
+    <img class="item fries" src="flor.jpg" onclick="openImage('images/memory2.jpg')" />
     <img class="item dice" src="dados.png" onclick="openImage('images/memory3.jpg')" />
     <img class="item cassette" src="cassette.png" onclick="openImage('images/memory4.jpg')" />
     <img class="item alex" src="alex.png" onclick="openImage('images/memory5.jpg')" />
@@ -179,7 +179,7 @@
     <img class="item beso" src="beso.png" onclick="openImage('images/memory7.jpg')" />
     <img class="item calendario" src="calendario.png" onclick="openImage('images/memory8.jpg')" />
     <img class="item carta" src="carta.png" onclick="openImage('images/memory9.jpg')" />
-    <img class="item cerillos" src="cerillos.png" onclick="openImage('images/memory10.jpg')" />
+    <img class="item cerillos" src="match.jph" onclick="openImage('images/memory10.jpg')" />
     <img class="item cine" src="cine.png" onclick="openImage('images/memory11.jpg')" />
     <img class="item uno" src="uno.png" onclick="openImage('images/memory12.jpg')" />
   </div>
