--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 .cerillos { 
   bottom: 2%; 
   left: 28%; 
-  width: 240px; 
+  width: 200px; 
 }
 
 .fries { 
@@ -179,7 +179,7 @@
     <img class="item beso" src="beso.png" onclick="openImage('images/memory7.jpg')" />
     <img class="item calendario" src="calendario.png" onclick="openImage('images/memory8.jpg')" />
     <img class="item carta" src="carta.png" onclick="openImage('images/memory9.jpg')" />
-    <img class="item cerillos" src="match.jph" onclick="openImage('images/memory10.jpg')" />
+    <img class="item cerillos" src="match.jpg" onclick="openImage('images/memory10.jpg')" />
     <img class="item cine" src="cine.png" onclick="openImage('images/memory11.jpg')" />
     <img class="item uno" src="uno.png" onclick="openImage('images/memory12.jpg')" />
   </div>
