--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
   top: 8%; 
   right: 28%; 
   width: 200px; 
+    transform: rotate(20deg);
+
 }
 
 .calendario { 
   top: 10%; 
   right: 10%; 
   width: 260px; 
+  transform: rotate(-10deg);
+
 }
 
 /* Left column */
