--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   <!-- COLLAGE -->
   <div class="collage">
-     <img class="item camera" src="camara2.png" onclick="openImage('memory1.jpg')" />
+     <img class="item camera" src="camara2.png" onclick="openImage('memory12.jpg')" />
     <img class="item coca" src="coca.jpeg" onclick="openImage('memory2.jpg')" />
     <img class="item dice" src="dados.png" onclick="openImage('memory3.jpg')" />
     <img class="item cassette" src="cassette.png" onclick="openImage('memory4.jpg')" />
@@ -195,7 +195,7 @@
     <img class="item carta" src="carta.png" onclick="openImage('memory9.jpg')" />
     <img class="item cerillos" src="ferrari.jpeg" onclick="openImage('memory10.jpg')" />
     <img class="item cine" src="cine.png" onclick="openImage('memory11.jpg')" />
-    <img class="item uno" src="uno.png" onclick="openImage('memory12.jpg')" />
+    <img class="item uno" src="uno.png" onclick="openImage('memory1.png')" />
     
   </div>
 
