--- a/index.html
+++ b/index.html
@@ -167,10 +167,12 @@
   <div id="manualModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeManual()">×</span>
-      <h2>Instrucciones 💌</h2>
+      <h2>Instrucciones </h2>
       <p>
-        Da click en cada uno de los objetos para un pequeño detalle.  </p>
-           <p>  - Ale  </p>
+        Existen tantas cosas que me encantan de ti, no solo por cómo me haces sentir, sino por quién eres.  
+        Aqui puedes encontrar algunas de las muchas cosas que me gustan de ti. 
+        Da click en los tokens para descubrirlas. 💌 </p>
+           <p>  - Con cariño, Ale  </p>
     </div>
   </div>
 
