--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <h2>Instrucciones </h2>
       <p>
         Existen tantas cosas que me encantan de ti, no solo por cómo me haces sentir, sino por quién eres.  
-        Aqui puedes encontrar algunas de las muchas cosas que me gustan de ti. 
+        Aqui puedes encontrar algunas, asi como uno que otro detalle. 
         Da click en los tokens para descubrirlas. 💌 </p>
            <p>  - Con cariño, Ale  </p>
     </div>
