--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <img class="item coca" src="coca.jpeg" onclick="openImage('memory2.jpg')" />
     <img class="item dice" src="dados.png" onclick="openImage('memory3.jpg')" />
     <img class="item cassette" src="cassette.png" onclick="openImage('memory4.jpg')" />
-    <img class="item alex" src="alex.png" onclick="openImage('memory5.jpg')" />
+    <img class="item alex" src="alex.png" onclick="openImage('tequiero.jpeg')" />
     <img class="item ale" src="ale.png" onclick="openImage('memory6.jpg')" />
     <img class="item beso" src="beso.png" onclick="openImage('memory7.png')" />
     <img class="item calendario" src="calendario.png" onclick="openImage('memory8.jpg')" />
