--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <img class="item dice" src="dados.png" onclick="openImage('4.png')" />
     <img class="item cassette" src="cassette.png" onclick="openImage('memory4.jpg')" />
     <img class="item alex" src="alex.png" onclick="openImage('tequiero.jpeg')" />
-    <img class="item ale" src="ale.png" onclick="openImage('memory6.jpg')" />
+    <img class="item ale" src="ale.png" onclick="openImage('ale_sopa.png')" />
     <img class="item beso" src="beso.png" onclick="openImage('1.png')" />
     <img class="item calendario" src="calendario.png" onclick="openImage('memory8.jpg')" />
 
