--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <img class="item cerillos" src="ferrari.jpeg" onclick="openImage('2.png')" />
     <img class="item cine" src="cine.png" onclick="openImage('pelis.png')" />
-    <img class="item uno" src="uno.png" onclick="openImage('memory2.png')" />
+    <img class="item uno" src="uno.png" onclick="openImage('5.png')" />
   </div>
 
   <script>
