--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <span class="close" onclick="closeManual()">×</span>
       <h2>Instrucciones</h2>
       <p>
-        Existen tantas cosas que me encantan de ti, no solo por cómo me haces sentir, sino por quién eres.  
+        Hay tantas cosas que me encantan de ti, no solo por cómo me haces sentir, sino por quién eres.  
         Aqui puedes encontrar algunas, asi como uno que otro detalle.
       </p>
       <p><b>Da click en los tokens para descubrirlas.</b> 💌</p>
